# smart-home

client/: addr_mgr.c  addr_mgr.h  list.h  main.c  msg_def.h
demo_service/: BUILD.gn  local_service.c  local_service.h  main_entry.c  message.c  msg_def.h  response_task.c  response_task.h  service_task.c  service_task.h  tcp_server.c  tcp_server.h  wifi_connect.c  wifi_connect.h
